# anki-mcp-server

./: .gitignore  README.md  pyproject.toml
src/anki_mcp_server/: server.py
