[project]
name = "anki-mcp-server"
version = "0.1.0"
description = "MCP server for Anki via AnkiConnect"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
anki-mcp-server = "anki_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
